Added init container for db

--- a/templates/database/database-ss.yaml
+++ b/templates/database/database-ss.yaml
@@ -41,6 +41,15 @@ spec:
       # is used to migrate the existing data. See https://github.com/goharbor/harbor-helm/issues/756
       # for more detail.
       # we may remove it after several releases
+      - name: "data-permissions-ensurer"
+        image: {{ .Values.database.internal.image.repository }}:{{ .Values.database.internal.image.tag }}
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
+        command: ["/bin/sh"]
+        args: ["-c", "chmod 700 /var/lib/postgresql/data/pgdata || true"]
+        volumeMounts:
+          - name: database-data
+            mountPath: /var/lib/postgresql/data
+            subPath: {{ $database.subPath }}
       - name: "data-migrator"
         image: {{ .Values.database.internal.image.repository }}:{{ .Values.database.internal.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
